# 3D-ObjectDetection-and-Pose-Estimation

./: README.md
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/object_perception/: CMakeLists.txt  package.xml
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/: CMakeLists.txt  package.xml
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/include/squirrel_attention/: pcl_conversions.h  squirrel_attention_3Dsymmetry.hpp  squirrel_attention_base.hpp  squirrel_attention_color.hpp  squirrel_attention_height.hpp  squirrel_attention_itti.hpp  squirrel_attention_location.hpp  squirrel_attention_surfaceorientation.hpp  squirrel_attention_symmetry.hpp
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/launch/: startup.launch
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/model/: squirrel_attention.ros_package  squirrel_attention.ros_package_diagram
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/src/: squirrel_attention_3Dsymmetry.cpp  squirrel_attention_color.cpp  squirrel_attention_height.cpp  squirrel_attention_itti.cpp  squirrel_attention_location.cpp  squirrel_attention_surfaceorientation.cpp  squirrel_attention_symmetry.cpp
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_attention/test/: squirrel_attention_3Dsymmetry_test.cpp  squirrel_attention_3Dsymmetry_test.test  squirrel_attention_base_test.hpp  squirrel_attention_color_test.cpp  squirrel_attention_color_test.test  squirrel_attention_height_test.cpp  squirrel_attention_height_test.test  squirrel_attention_itti_test.cpp  squirrel_attention_itti_test.test  squirrel_attention_location_test.cpp  squirrel_attention_location_test.test  squirrel_attention_surfaceorientation_test.cpp  squirrel_attention_surfaceorientation_test.test  squirrel_attention_symmetry_test.cpp  squirrel_attention_symmetry_test.test
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_classification/: CMakeLists.txt  README.md  package.xml
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_classification/launch/: startup.launch
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_classification/model/: squirrel_classification.ros_package  squirrel_classification.ros_package_diagram
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_classification/src/: shape_simple_classifier_node.cpp
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/: CMakeLists.txt  README.md  package.xml  setup.py
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/cfg/: squirrel_look_for_objects.cfg
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/docs/: squirrel_look_for_objectsConfig-usage.dox  squirrel_look_for_objectsConfig.dox  squirrel_look_for_objectsConfig.wikidoc
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/launch/: startup.launch
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/model/: squirrel_object_perception.ros_package  squirrel_object_perception.ros_package_diagram
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/src/squirrel_object_perception/: squirrel_look_for_objects  squirrel_look_for_objects.py
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/squirrel_object_perception/test/: test_look_for_objects_squirrel_object_perception.py  test_squirrel_look_for_objects_squirrel_object_perception.py  testdata_look_for_objects_squirrel_object_perception.yaml  testdata_squirrel_look_for_objects_squirrel_object_perception.yaml
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/: CMakeLists.txt  README.md  V4RConfig.cmake  opencv.cmake  openmp.cmake  package.xml  pcl.cmake  v4r.pc.in  v4rutils.cmake
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4r/: CMakeLists.txt
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4r/AttentionModule/: AttentionModule.hpp  AttentionModuleErrors.hpp  BaseMap.cpp  BaseMap.hpp  CMakeLists.txt  ColorMap.cpp  ColorMap.hpp  FrintropSaliencyMap.cpp  FrintropSaliencyMap.hpp  HitRatio.cpp  HitRatio.hpp  IKNSaliencyMap.cpp  IKNSaliencyMap.hpp  LocationMap.cpp  LocationMap.hpp  MSR.cpp  MSR.hpp  MapsCombination.cpp  MapsCombination.hpp  OrientationMap.cpp  OrientationMap.hpp  RelativeSurfaceOrientationMap.cpp  RelativeSurfaceOrientationMap.hpp  SurfaceCurvatureMap.cpp  SurfaceCurvatureMap.hpp  SurfaceHeightMap.cpp  SurfaceHeightMap.hpp  Symmetry3DMap.cpp  Symmetry3DMap.hpp  SymmetryMap.cpp  SymmetryMap.hpp  TJ.cpp  TJ.hpp  WTA.cpp  WTA.hpp  headers.hpp  pyramidBase.cpp  pyramidBase.hpp  pyramidFrintrop.cpp  pyramidFrintrop.hpp  (+4 more)
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4r/CalibrationRGBD/: CMakeLists.txt  cam.cpp  cam.h  dccam.cpp  dccam.h  dsensor.cpp  dsensor.h
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4r/EPUtils/: CMakeLists.txt  EPUtils.hpp  PCA.cpp  PCA.hpp  PCLPreprocessingXYZRC.hpp  algo.cpp  algo.hpp  connectedComponents.cpp  connectedComponents.hpp  convertions.cpp  convertions.hpp  debugUtils.cpp  debugUtils.hpp  drawUtils.cpp  drawUtils.hpp  headers.hpp  math.cpp  math.hpp  normalization.cpp  normalization.hpp  sphereHistogram.cpp  sphereHistogram.hpp  timeUtils.cpp  timeUtils.hpp  utils.cpp  utils.hpp
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4r/GraphCut/: CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  GraphCut.cpp  GraphCut.h  README.txt  disjoint-set.cpp  disjoint-set.h
8.其他/机器人抓取/重构/NCC/squirrel_perception_backup-hydro_dev/v4r/v4rexternal/: CMakeLists.txt
8.其他/机器人抓取/重构/NCC/vtkImageNormalizedCrossCorrelation-master/: CMakeLists.txt  vtkImageNormalizedCrossCorrelation.cxx  vtkImageNormalizedCrossCorrelation.h  vtkImageNormalizedCrossCorrelationExample.cxx
8.其他/机器人抓取/重构/NCC/vtkImageNormalizedCrossCorrelation-master/output/Debug/: vtkImageNormalizedCrossCorrelationExample.ilk
(+802 files in other folders)
