<?xml version="1.0"?>
<package>
  <name>squirrel_object_perception</name>
  <description>The squirrel_object_perception package</description>
  <version>0.1.0</version>
  <maintainer email="markus.bajones@acin.tuwien.ac.at">Markus Bajones</maintainer>
  <author email="markus.bajones@acin.tuwien.ac.at">Markus Bajones</author>
  <license>GPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
