<?xml version="1.0"?>
<package>
  <name>v4r</name>
  <version>0.0.0</version>
  <description>The v4r package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Fäulhammer</maintainer>
  <maintainer email="aldoma@acin.tuwien.ac.at">Aitor Aldoma</maintainer>
  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pcd_filter</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>freeglut3-dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>suitesparse</build_depend>  <!-- yes, it is suitesparse, no lib, no dev -->
  <build_depend>libceres-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopenni-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>freeglut3-dev</run_depend>
  <run_depend>suitesparse</run_depend>
  <run_depend>libceres-dev</run_depend> <!-- yes, it is libceres-dev, there is no non-dev entry in rosdep -->
  <run_depend>libpcl-all</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
