#add_subdirectory(Annotation)
#add_subdirectory(utils)
add_subdirectory(armarker)
add_subdirectory(EPUtils)
#add_subdirectory(geometry)
#add_subdirectory(huttenlocher)
#add_subdirectory(fw)
#add_subdirectory(edgelinker)
#add_subdirectory(ellmarker)
#add_subdirectory(CalibrationRGBD)
#add_subdirectory(CEdge)
#add_subdirectory(daisy)
#add_subdirectory(bayer2rgb)
#add_subdirectory(DenseGeometry)
#add_subdirectory(linedetector)
#add_subdirectory(circle)
#add_subdirectory(canny)
#add_subdirectory(cmvision)
#add_subdirectory(colors)
#add_subdirectory(checkerboard)
add_subdirectory(cvextensions)
#add_subdirectory(GrabberKinectGUI)
#add_subdirectory(particlefilter)
#add_subdirectory(com)
#add_subdirectory(yml_for_matlab)
add_subdirectory(PCLAddOns)
#add_subdirectory(RGBDSegment)
#add_subdirectory(elldetect)
#add_subdirectory(ellcalib)
#add_subdirectory(KeypointAOTrackerIm)
#add_subdirectory(KeypointAOTrackerProj)
add_subdirectory(KeypointBase)
add_subdirectory(KeypointCameraTracker)
add_subdirectory(KeypointCameraTrackerPCL)
#add_subdirectory(KeypointConversions)
#add_subdirectory(KeypointObjectTracker)
#add_subdirectory(KeypointSlam)
add_subdirectory(KeypointTools)
#add_subdirectory(CModelRecogniser)
#add_subdirectory(grabStereoKinectSequence)
#add_subdirectory(LPSegment)
#add_subdirectory(KinectInterface)
#add_subdirectory(ModelCompleteness)
#add_subdirectory(MultiViewModeling)
#add_subdirectory(NURSS)
#add_subdirectory(ObjectModeling)
add_subdirectory(on_nurbs)
#add_subdirectory(OnNurbsAddOns)
add_subdirectory(OREdgeDetector)
add_subdirectory(ORGTEvaluator)
add_subdirectory(ORUtils)
add_subdirectory(ORRecognition)
add_subdirectory(ORRegistration)
add_subdirectory(ORFramework)
#add_subdirectory(QuadGrid)
#add_subdirectory(RandomForest)
#add_subdirectory(Recognizer3D)
#add_subdirectory(Segmentation)
#add_subdirectory(SFM)
#add_subdirectory(SqrPatternDetector)
#add_subdirectory(Superquadrics)
#add_subdirectory(SuperquadricsAri)
#add_subdirectory(SurfaceBoundary)
add_subdirectory(SurfaceClustering)
add_subdirectory(SurfaceModeling)
add_subdirectory(SurfaceRelations)
add_subdirectory(SurfaceUtils)
add_subdirectory(svm)
add_subdirectory(SVM)
add_subdirectory(TomGine)
add_subdirectory(TomGine5)
#add_subdirectory(TomGineAI)
#add_subdirectory(TomGineIP)
add_subdirectory(TomGinePCL)
#add_subdirectory(TomNurbs)
#add_subdirectory(Tracker)
#add_subdirectory(Tspline)
#add_subdirectory(TsplineOptimization)
add_subdirectory(GraphCut)
#add_subdirectory(GraphCutRGBD)
add_subdirectory(PCore)
#add_subdirectory(Surf)
#add_subdirectory(CModel)
#add_subdirectory(CModel2)
#add_subdirectory(OpenniDevice)
#add_subdirectory(GrabberKinectGUI)
add_subdirectory(AttentionModule)
#add_subdirectory(EPSegment)
#add_subdirectory(AttentionInterface)
#add_subdirectory(EPExamples)
#add_subdirectory(EPEvaluation)
#add_subdirectory(matas)
#add_subdirectory(vs3)
add_subdirectory(SurfaceSegmenter)
#add_subdirectory(VoxelGridFilter)
