add_subdirectory(EDT)
#add_subdirectory(levmar-2.5)
#add_subdirectory(sba-1.6)
#add_subdirectory(homest-1.3)
add_subdirectory(SiftGPU)
add_subdirectory(metslib)
add_subdirectory(opennurbs)
#add_subdirectory(TTL-1.1.0)
#add_subdirectory(mba-1.1)
#add_subdirectory(parallelsurf)
#add_subdirectory(siftpp)
